--- a/iframe.html
+++ b/iframe.html
@@ -21,9 +21,11 @@
 
 				<label id="date_label" for="date">
 					<span>Wednesday, August 12</span>
+					<!--
 					<svg viewBox="0 0 24 24"><path fill="currentColor" d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" /></svg>
 
-					<div id="date_dropdown">
+				-->
+					<div id="date_dropdown" style="display: none">
 						<input type="date" id="date" />
 					</div>
 				</label>
@@ -31,8 +33,8 @@
 				<div class="spacer"></div>
 
 				<select id="view">
-					<option value="0" selected>Agenda</option>
-					<option value="1">Month</option>
+					<option value="0">Agenda</option>
+					<option value="1" selected>Month</option>
 				</select>
 			</nav>
 		</div>
